added svg, and stats placeholders

--- a/chai.html
+++ b/chai.html
@@ -2,9 +2,23 @@
 <html>
     <head>
       <meta charset="utf-8">
-
+      <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
+	<h1>Chai Energy</h1>
+	<h2>Monthly usage</h2>
+	<svg width="960" height="500"></svg>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script src="chart.js"></script>
+	<div class ="stats">
+	    <h3>Monthly usage</h3>
+	    <div class="monthlyUsage"></div>
 
+	    <h3>Weekday average</h3>
+	    <div class="weekdayAverage"></div>
+
+	    <h3>Average day</h3>
+	    <div class="averageDay"></div>
+	</div>
     </body>
 </html>
